fixed text-align for h1

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ h2, h3{
 
 h1 {
   font-size: 3rem;
+  text-align: center;
   margin-bottom: 2%;
 }
 
